# colmap-neural

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_DEV.md  docker-compose.yml  flake.nix  shell.nix
cmake/: ConfigureCOLMAP.cmake.in  FindCOLMAP.cmake  FindMetal.cmake  PatchCOLMAP.cmake
colmap-neural-app/: CMakeLists.txt
colmap-neural-app/src/: main.cc
config/: config.ini  local_config.cmake.ini
doc/: implement_plan.md
neural-extensions/: CMakeLists.txt
neural-extensions/neural-core/: CMakeLists.txt
neural-extensions/neural-core/include/: mps_utils.h  neural_interface.h  registry.h
neural-extensions/neural-core/src/: mps_utils.cc  neural_interface.cc  registry.cc
scripts/: benchmark.py  build.sh  download_models.py  run.sh  setup_docker.sh  setup_local.sh
src/: main.cc
src/core/: frame.h
src/utilities/: config.cc  config.h
